classDiagram
    class KnowledgeBase {
        +Guid Id
        +string Name
        +List~Concept~ C
        +List~Hierarchy~ H
        +List~Relation~ R
        +List~Operator~ Ops
        +List~Function~ Funcs
        +List~Rule~ Rules
    }
    KnowledgeBase "1" *-- "many" Concept
    KnowledgeBase "1" *-- "many" Hierarchy
    KnowledgeBase "1" *-- "many" Relation
